--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -1,4 +1,5 @@
 $brand-color-left: #2ECC71; // #5EEDDE; // #31916C; // #26B679
+$brand-shadow-color-left: #2BBE69;
 $brand-color-intersect: #2bb3ae;
 $brand-color-right: #2191FB;
 $brand-color-high-contrast: #0C0F0A; //darken($brand-color, 10%);
