--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -1,6 +1,7 @@
 @import "normalize";
 @import "media-queries";
 @import "smile";
+@import "variables";
 
 .template__container {
   font-family: Cabin, sans-serif;
@@ -328,8 +329,8 @@ section {
     text-transform: uppercase;
     color: #FFFFFF;
     justify-content: center;
-    background: linear-gradient(90deg, #2ECC71 0.04%, #2191FB 99.96%);
-    box-shadow: 0px 0px 45px rgba(0, 0, 0, 0.25);
+    background: linear-gradient(90deg, $brand-shadow-color-left 0.04%, $brand-color-left 99.96%);
+    box-shadow: 0 0 45px rgba(0, 0, 0, 0.25);
     border-radius: 60px;
     margin: 85px auto 0 auto;
     cursor: pointer;
@@ -398,15 +399,15 @@ section {
     }
 
     &__person-face {
-      width: 65px;
-      height: 65px;
-      border: 2px solid #FFFFFF;
+      width: 60px;
+      height: 60px;
+      border: 1px solid #FFFFFF;
       border-radius: 100%;
       position: absolute;
       left: 0;
-      background-color: #2294f340;
-      background-blend-mode: soft-light;
-      background-size: cover;
+      background-color: #c6e5ff;
+      background-size: inherit;
+      background-position: center;
       //transition: transform 2s ease;
       @include mobile-only {
         width: 35px;
@@ -504,17 +505,17 @@ section {
 
     &--q2 {
       grid-area: q2;
-      background: #FFFBE3;
+      background: #E4F2FB;
     }
 
     &--q3 {
       grid-area: q3;
-      background: #E5FFEE;
+      background: #E4F2FB;
     }
 
     &--q4 {
       grid-area: q4;
-      background: #FFFBE3;
+      background: #E4F2FB;
     }
 
     &--q5 {
