--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -127,6 +127,7 @@ section {
   position: absolute;
   z-index: 2;
   transition: transform 0.4s ease, opacity 0.4s ease;
+  will-change: transform, opacity;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -406,7 +407,7 @@ section {
       position: absolute;
       left: 0;
       background-color: #c6e5ff;
-      background-size: inherit;
+      background-size: 106% 106%;
       background-position: center;
       //transition: transform 2s ease;
       @include mobile-only {
@@ -538,6 +539,7 @@ section {
   /* padding: 15% 0; */
   cursor: zoom-out;
   overflow: auto;
+  will-change: opacity, transform;
 
   &__content {
     max-width: 480px;
@@ -614,6 +616,7 @@ section {
   bottom: 35px;
   right: -100px;
   transition: transform 9s ease-out;
+  will-change: transform;
   //animation-name: skate;
   //animation-duration: 10s;
   //animation-timing-function: ease-out;
