--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -1,212 +1,8 @@
 @import "normalize";
 @import "media-queries";
-@import "smile";
 @import "variables";
+@import "smile";
 
-.template__container {
-  font-family: Cabin, sans-serif;
-  color: #0C0F09;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: asset_url('welcome/bg-top.jpg');
-  background-repeat: no-repeat;
-  background-position: top center;
-  @include mobile-only {
-    background-image: asset_url('welcome/bg-top-mobile.jpg');
-    background-repeat: no-repeat;
-    background-position: top center;
-  }
-}
-
-section {
-  min-height: 50px;
-}
-
-.brand {
-  display: flex;
-  margin: 40px 0 50px 0;
-  min-height: auto;
-  align-items: center;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-
-  @include mobile-only {
-    margin: 30px 0 25px 0;
-  }
-
-  &__logo {
-    position: relative;
-  }
-
-  &__pimba {
-    text-transform: uppercase;
-    width: 20px;
-    height: 15px;
-    position: absolute;
-    font-size: 12px;
-    left: -30px;
-    top: -15px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-  & > div {
-    padding: 0 5px;
-  }
-}
-
-.headline {
-  font-style: normal;
-  font-weight: bold;
-  text-align: center;
-  @include mobile-only {
-    padding: 0 25px;
-  }
-
-  & h1 {
-    font-size: 48px;
-    line-height: 58px;
-    margin: 0;
-    padding: 0;
-
-    @include mobile-only {
-      font-size: 28px;
-      line-height: 30px;
-    }
-  }
-
-  & h2 {
-    font-weight: 100;
-    font-size: 24px;
-    line-height: 29px;
-    margin: 10px 0 0 0;
-    max-width: 1080px;
-    @include mobile-only {
-      font-size: 14px;
-      line-height: 20px;
-    }
-  }
-}
-
-.features {
-  margin: 75px 0 0 100px;
-  position: relative;
-  @include mobile-only {
-    margin: 25px 0 0 0;
-    overflow-x: scroll;
-    width: 100vw;
-  }
-
-  &__scroll-view {
-    position: relative;
-    width: 1120px;
-    height: 330px;
-    @include mobile-only {
-      width: 1100px;
-      height: 275px;
-      margin: 0 25px;
-    }
-  }
-}
-
-.feature {
-  background: #FFFFFF;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
-  border-radius: 6px;
-  width: 220px;
-  height: 105px;
-  padding: 12px 25px;
-  font-style: normal;
-  text-align: center;
-  color: rgba(0, 0, 0, 0.8);
-  position: absolute;
-  z-index: 2;
-  transition: transform 0.4s ease, opacity 0.4s ease;
-  will-change: transform, opacity;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-
-  @include mobile-only {
-    width: 200px;
-    height: 100px;
-  }
-
-  &--activities {
-    position: absolute;
-    left: 0%;
-    top: 54.07%;
-    z-index: 3;
-    @include mobile-only {
-      top: 47.07%;
-    }
-  }
-
-  &--events {
-    position: absolute;
-    left: 17.35%;
-    top: 0%;
-    @include mobile-only {
-      left: 12.35%;
-      top: 7%;
-    }
-  }
-
-  &--topics {
-    position: absolute;
-    left: 31.6%;
-    top: 45.27%;
-    z-index: 3;
-    @include mobile-only {
-      left: 31.6%;
-      top: 38.27%;
-    }
-  }
-
-  &--friends {
-    position: absolute;
-    left: 53.25%;
-    top: 14.62%;
-    @include mobile-only {
-      left: 64.25%;
-      top: 8.62%;
-    }
-  }
-
-  &--movie {
-    position: absolute;
-    left: 68.86%;
-    top: 61.21%;
-    z-index: 3;
-    @include mobile-only {
-      left: 74.86%;
-      top: 49.21%;
-    }
-  }
-
-
-  &__icon {
-    width: 48px;
-    height: 48px;
-    margin: 0 auto 6px auto;
-  }
-
-  &__title {
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    @include mobile-only {
-      font-size: 14px;
-      line-height: 18px;
-    }
-  }
-}
 
 
 .demo {
@@ -485,7 +281,7 @@ section {
     font-weight: bold;
     font-size: 18px;
     line-height: 22px;
-    color: #2191FB;
+    color: #166dbf;
     cursor: pointer;
     width: 100%;
     height: 100%;
