--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <title>Alegreme - Aproveite a cidade de Porto Alegre</title>
 
+  <meta name="Description" content="Atividades de rua, meetups profissionais, os rolês que só avisam no dia, aquele filme no Mario Quintana... Um feed para as pessoas que gostam de explorar coisas novas e de não perder o que já conhecem.">
   <meta name="theme-color" content="#5ecf80"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=5.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
   <%= csrf_meta_tags %>
@@ -14,9 +15,11 @@
   <%= favicon_link_tag asset_path 'favicon-32x32.png', sizes: "32x32" %>
   <%= favicon_link_tag asset_path 'favicon-16x16.png', sizes: "16x16" %>
 
-  <%= stylesheet_link_tag 'welcome/application' %>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700">
-  <%= Gon::Base.render_data %>
+
+  <%= inline_css 'welcome/fcp.css' %>
+  <%= inline_js 'welcome/fcp.js' %>
+
+  <%= stylesheet_link_tag 'welcome/application', media: "none", onload: "if(media!='all')media='all'" %>
 
 </head>
 <body>
@@ -36,9 +39,10 @@
   </div>
 <% end %>
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700">
+<%= javascript_include_tag 'welcome/application.js', defer: true %>
+<script src="https://apis.google.com/js/api:client.js?onload=init" defer></script>
 <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5d2f4bbe364d580011c349e5&product=inline-share-buttons' async='async'></script>
-<script src="https://apis.google.com/js/api:client.js?onload=init"></script>
-<%= javascript_include_tag 'welcome/application.js' %>
 
 </body>
 </html>
