--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 
   <section class="brand">
     <div class="brand__letter">
-      <%= image_tag "welcome/logo-letter.png" %>
+      <%= image_tag "welcome/logo-letter.png", alt: 'logo' %>
     </div>
   </section>
 
