--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -47,7 +47,7 @@
                   initial_filters:              items[:ocurrences],
                   params_filters:               params[:ocurrences],
                   filters_that_exist_in_events: items[:ocurrences],
-                  icon_type:                    'today',
+                  icon_type:                    '',
                   type:                         'ocurrences'
               } %>
             <% end %>
