--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -117,9 +117,13 @@
            data-action="click->event#showSimilar"
            data-target="event.similar"
            title="Mostrar eventos parecidos">
-        <i class="material-icons">
-          expand_more
-        </i>
+        <svg width="28" height="11" viewBox="0 0 28 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M14 11L0 0H28L14 11Z"/>
+        </svg>
+
+        <!--        <i class="material-icons">-->
+<!--          expand_more-->
+<!--        </i>-->
       </div>
     <% end %>
   </div>
