--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -53,7 +53,7 @@
       <div class="macbook rellax" data-rellax-speed="1">
         <div class="macbook__screen">
           <div class="macbook__beta-explanation"></div>
-          <%= image_tag "welcome/demo-2.gif", alt: "demonstração" %>
+          <img data-src="<%= image_url 'welcome/demo-2.gif' %>" alt="demonstração" class="lazyload">
         </div>
       </div>
     </section>
