--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -6,7 +6,10 @@ $gutter: 6px;
 
 .me-saves {
   position: relative;
-  margin-bottom: 50px;
+  //margin-bottom: 50px;
+  //padding: 35px 0 70px 0;
+  //background: $background-z0-color;
+  @include section-constraints;
   @include mdc-layout-grid-media-query_("phone") {
     display: none;
   }
@@ -64,7 +67,8 @@ $gutter: 6px;
     text-align: center;
     justify-content: center;
     font-size: 11px;
-    margin: 26px 0 55px 0;
+    //margin: 26px 0 55px 0;
+    height: 66px;
     padding: 0 12px;
     border: 1px solid $border-color;
 
@@ -79,7 +83,7 @@ $gutter: 6px;
   }
 
   & .mdc-typography--headline6 {
-    margin: 0;
+    margin: 0 0 15px 0;
     font-size: 1.3em;
     font-weight: 800;
   }
@@ -95,7 +99,7 @@ $gutter: 6px;
     display: grid;
     grid-gap: 12px;
     grid-template-columns: inherit;
-    grid-template-rows: minmax(150px, 1fr);
+    grid-template-rows: minmax(120px, 1fr);
     grid-auto-flow: column;
     grid-auto-columns: 54px;
     padding-bottom: calc(0.75 * #{$gutter});
@@ -144,7 +148,7 @@ $gutter: 6px;
     &__date {
       color: $font-secondary-color;
       text-transform: uppercase;
-      font-size: 11px;
+      font-size: 12px;
       margin: 8px 0 6px 0;
       font-weight: 800;
       min-height: 1.1em;
@@ -153,8 +157,9 @@ $gutter: 6px;
     &__remove {
       background: $icon-background-color;
       position: absolute;
-      top: 29px;
-      right: 3px;
+      top: 5px;
+      right: 5px;
+      right: 5px;
       width: 16px;
       height: 16px;
       cursor: pointer;
