--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -7,9 +7,10 @@ $border-color: #e0e0e0;
 
 .me-top-app-bar {
   background-color: $fill-color;
+  box-shadow: $surface-z10-box-shadow;
   color: $font-color;
   position: fixed;
-  border-bottom: 1px solid $border-color;
+  //border-bottom: 1px solid $border-color;
   top: 0;
   user-select: none;
 
@@ -32,8 +33,8 @@ $border-color: #e0e0e0;
     }
 
     &-text{
-      height: 22px;
-      margin: 2px 0 0 6px;
+      //height: 22px;
+      margin: 2px 0 0 115px;
       //display: none;
     }
 
@@ -73,7 +74,7 @@ $border-color: #e0e0e0;
 
     &--middle {
       display: flex;
-      width: 920px;
+      width: 700px;
       flex: none;
 
       @include mdc-layout-grid-media-query_("phone") {
