--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -3,19 +3,7 @@
   <div class="mdc-top-app-bar__row">
     <section
       class="me-top-app-bar__section me-top-app-bar__section--left mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-      <svg class="me-top-app-bar__logo-icon" xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35" fill="none">
-        <path d="M17.5492 34.0853C26.6619 34.0853 34.0492 26.698 34.0492 17.5853C34.0492 8.47263 26.6619 1.08533 17.5492 1.08533C8.43649 1.08533 1.04919 8.47263 1.04919 17.5853C1.04919 26.698 8.43649 34.0853 17.5492 34.0853Z" fill="url(#paint0_linear)" class="smile__body"/>
-        <path d="M26.0492 23.1745C20.9492 27.1745 14.1492 27.1745 9.04919 23.1745" stroke="#4A222A" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" class="smile__mouth"/>
-        <path d="M12.0492 17.1745C13.1538 17.1745 14.0492 15.6075 14.0492 13.6745C14.0492 11.7415 13.1538 10.1745 12.0492 10.1745C10.9446 10.1745 10.0492 11.7415 10.0492 13.6745C10.0492 15.6075 10.9446 17.1745 12.0492 17.1745Z" fill="#4A222A" class="smile__left-eye"/>
-        <path d="M23.0492 17.1745C24.1538 17.1745 25.0492 15.6075 25.0492 13.6745C25.0492 11.7415 24.1538 10.1745 23.0492 10.1745C21.9446 10.1745 21.0492 11.7415 21.0492 13.6745C21.0492 15.6075 21.9446 17.1745 23.0492 17.1745Z" fill="#4A222A" class="smile__right-eye"/>
-        <defs>
-          <linearGradient id="paint0_linear" x1="28.5492" y1="29.6745" x2="3.04919" y2="1.1745" gradientUnits="userSpaceOnUse">
-            <stop offset="0.230508" stop-color="#FEE103"/>
-            <stop offset="1" stop-color="white"/>
-          </linearGradient>
-        </defs>
-      </svg>
-      <img class="me-top-app-bar__logo-text" src="<%= asset_url "/images/logo-letter.png" %>" alt="">
+      <%= image_tag 'welcome/logo-letter.png', class: 'me-top-app-bar__logo-text', alt: 'logo' %>
     </section>
     <% if mobile_device? && controller == 'events' %>
       <section class="me-top-app-bar__section me-top-app-bar__section--middle mdc-top-app-bar__section">
